code/src/ir/snapshots/stak_code__ir__program__tests__<.snap
---
source: code/src/ir/program.rs
expression: "Program::new(vec![format! (\"{}\", sign)], vec![])"
---
# symbols
- \<
# instructions
