code/src/ir/snapshots/stak_code__ir__program__tests__display_closure.snap
---
source: code/src/ir/program.rs
expression: "Program::new(vec![],\n    vec![Instruction ::\n        Closure(42, vec!\n        [Instruction :: Constant(Operand :: Integer(2045))],)])"
---
symbols: []
instructions:
closure 42
  constant i2045
