code/src/ir/snapshots/stak_code__ir__program__tests__display_closure_with_if.snap
---
source: code/src/ir/program.rs
expression: "Program::new(vec![],\n    vec![Instruction :: Constant(Operand :: Integer(0)), Instruction ::\n        Constant(Operand :: Integer(1)), Instruction ::\n        Close(42, vec!\n        [Instruction :: Constant(Operand :: Integer(2)), Instruction ::\n        If(vec!\n        [Instruction :: Constant(Operand :: Integer(3)), Instruction ::\n        Constant(Operand :: Integer(4)),]), Instruction ::\n        Constant(Operand :: Integer(5)), Instruction ::\n        Constant(Operand :: Integer(6)),],), Instruction ::\n        Constant(Operand :: Integer(7)), Instruction ::\n        Constant(Operand :: Integer(8)),])"
---
# symbols
# instructions
- constant i0
- constant i1
- closure 42
  - constant i2
  - if
    - constant i3
    - constant i4
  - constant i5
  - constant i6
- constant i7
- constant i8
