code/src/ir/snapshots/stak_code__ir__program__tests__display_if.snap
---
source: code/src/ir/program.rs
expression: "Program::new(vec![],\n    vec![Instruction ::\n        If(vec! [Instruction :: Constant(Operand :: Integer(42))])])"
---
# symbols
# instructions
if
  constant i42
