code/src/ir/snapshots/stak_code__ir__program__tests__display_symbols.snap
---
source: code/src/ir/program.rs
expression: "Program::new(vec![\"foo\".into(), \"bar\".into()], vec![])"
---
symbols: ["foo", "bar"]
instructions:

