code/src/ir/snapshots/stak_code__ir__program__tests__display_symbols_with_special_signs-2.snap
---
source: code/src/ir/program.rs
expression: "Program::new(vec![format! (\"{}\", sign)], vec![])"
---
# symbols
- \+
# instructions
