code/src/ir/snapshots/stak_code__ir__program__tests__display_symbols_with_special_signs.snap
---
source: code/src/ir/program.rs
expression: "Program::new(vec![\"+\".into(), \"*\".into(), \"<\".into(), \">\".into()], vec![])"
---
# symbols
- \+
- \*
- \<
- \>
# instructions
